--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -58,12 +58,16 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: none;
+}
+
+/* Control button hover effects */
+.control-button:hover .MuiSvgIcon-root {
+  color: #1ed760 !important;
+  transition: color 0.2s ease;
 }
 
 /* Animated Gradient Background */
@@ -88,23 +92,23 @@ button:focus-visible {
 
 .gradient-1 {
   background: rgb(29, 114, 30);
-  width: 700px;
-  height: 700px;
+  width: 500px;
+  height: 500px;
   animation-duration: 11s;
   opacity: 0.6;
-  left: 60%;
-  top: 40%;
+  left: 75%;
+  top: 50%;
   z-index: -2;
   animation-name: animation-gradient-1;
 }
 
 .gradient-2 {
   background: rgb(62, 121, 62);
-  width: 600px;
-  height: 600px;
+  width: 450px;
+  height: 450px;
   animation-duration: 11s;
   opacity: 0.6;
-  left: 40%;
+  left: 65%;
   top: 60%;
   z-index: -1;
   animation-name: animation-gradient-2;
@@ -112,12 +116,12 @@ button:focus-visible {
 
 .gradient-3 {
   background: rgb(69, 232, 148);
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   animation-duration: 11s;
   opacity: 0.6;
-  left: 50%;
-  top: 50%;
+  left: 70%;
+  top: 40%;
   z-index: -3;
   animation-name: animation-gradient-3;
 }
